tests/fail/missing_log_level.rs
#[log_attributes::log("{fn} was executed")]
fn missing_log_level() {}

fn main() {}
